--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -29,7 +29,7 @@
       <HBox prefHeight="46.0" prefWidth="1280.0" spacing="10.0" styleClass="containerWithGradient">
          <children>
             <Region prefHeight="43.0" prefWidth="1012.0" HBox.hgrow="ALWAYS" />
-            <ImageView fitHeight="59.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="profilePic" fitHeight="59.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="usernameLabel" prefHeight="21.0" prefWidth="165.0" text="[username]">
                <HBox.margin>
                   <Insets top="20.0" />
